Fix problems with overflow and improve cursor pointer

--- a/src/main.scss
+++ b/src/main.scss
@@ -127,6 +127,14 @@ textarea {
 		@include desktop() {
 			width: 35rem;
 		}
+		&__title {
+			overflow: hidden;
+			text-align: center;
+			width: 14rem;
+			@include desktop() {
+				width: 27rem;
+			}
+		}
 	}
 }
 // edit todos
@@ -138,6 +146,13 @@ textarea {
 	min-height: 100%;
 	@include flexCenter(column);
 	background: $black-filter-soft;
+	&__title {
+		overflow: hidden;
+		width: 14rem;
+		@include desktop() {
+			width: 27rem;
+		}
+	}
 }
 .edit__todo {
 	@include card();
@@ -183,10 +198,10 @@ textarea {
 	border-radius: 0.5rem;
 	margin: 0.5rem 0;
 	box-shadow: $shadow;
-	cursor: pointer;
 	&__title {
 		padding: 0.9rem 0 0.9rem 1rem;
 		width: 100%;
+		overflow: hidden;
 	}
 	&__delete__btn {
 		color: $text;
@@ -218,6 +233,7 @@ textarea {
 .list__item {
 	@include flexCenter(row);
 	justify-content: flex-start;
+	cursor: pointer;
 	&:hover {
 		background-image: $bg-hover;
 	}
@@ -227,6 +243,7 @@ textarea {
 	align-items: flex-start;
 	&__short {
 		width: 100%;
+		cursor: pointer;
 		@include flexCenter(row);
 		justify-content: flex-start;
 		&:hover {
@@ -248,6 +265,7 @@ textarea {
 		}
 	}
 	&__desc {
+		overflow: hidden;
 		width: 12rem;
 		margin: 1rem;
 		@include desktop() {
